--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lodash.groupby": "^4.6.0",
     "vue": "^2.6.10",
     "vue-fusioncharts": "^3.0.4",
+    "vue-language-server": "^0.0.67",
     "vue-router": "^3.1.3",
     "vuetify": "^2.1.0",
     "vuetify-datetime-picker": "^2.1.1"
@@ -26,9 +27,9 @@
     "@vue/eslint-config-prettier": "^5.0.0",
     "axios": "^0.18.0",
     "babel-eslint": "^10.0.3",
-    "eslint": "^5.16.0",
+    "eslint": "^7.4.0",
     "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-vue": "^5.0.0",
+    "eslint-plugin-vue": "^6.2.2",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
     "prettier": "^1.19.1",
