--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.4.4",
+    "firebase": "^7.17.1",
     "fusioncharts": "^3.15.0-sr.1",
     "lodash.groupby": "^4.6.0",
     "vue": "^2.6.10",
